deploy/sa-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sa-backend
spec:
    replicas: 1
    minReadySeconds: 15
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 1
    selector:
        matchLabels:
            app: sa-backend
    template:
        metadata:
            labels:
                app: sa-backend
        spec:
            containers:
            - image: cr.yandex/crpli9f3ae0v1b2slej3/app-backend:latest
              name: app-backend
              imagePullPolicy: Always
              ports:
                - containerPort: 5000
