deploy/sa-frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: sa-frontend
    labels:
        app: sa-frontend
spec:
    containers:
    - image: app-frontend
      name: app-frontend
      imagePullPolicy: Never
      ports:
        - containerPort: 80
