deploy/service-sa-backend-lb.yaml
apiVersion: v1
kind: Service
metadata:
    name: sa-backend-lb
spec:
    type: ClusterIP
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
        app: sa-backend
