deploy/service-sa-frontend-lb.yaml
apiVersion: v1
kind: Service
metadata:
    name: sa-frontend-lb
spec:
    type: NodePort
    ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 80
        nodePort: 30081
    selector:
        app: sa-frontend
