deploy/service-sa-psql-lb.yaml
apiVersion: v1
kind: Service
metadata:
    name: sa-psql-lb
spec:
    type: LoadBalancer
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
        app: sa-psql
