deploy/service-sa-psql.yaml
apiVersion: v1
kind: Service
metadata:
    name: sa-psql-service
spec:
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
        app: sa-psql
